tests/error/type_errors/unpack_too_many.py
from tests.util import compile_guppy


@compile_guppy
def foo() -> int:
    a, b = 1, True, 3.0
    return a
