tests/error/type_errors/unpack_too_many.err
Error: Not enough values to unpack (at $FILE:6:4)
  | 
4 | @compile_guppy
5 | def foo() -> int:
6 |     a, b = 1, True, 3.0
  |     ^^^^ Not enough assignment targets (expected 3, got 2)

Guppy compilation failed due to 1 previous error
